# fenic

./: .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PYPI.rst  README.md  ROADMAP.md  buf.gen.py.yaml  justfile  mkdocs.yml  pyproject.toml  ruff.toml
.github/: renovate.json5
.github/actions/maturin-build/: action.yaml
.github/workflows/: build_and_release.yaml  pr_semantic.yaml  pr_trunkio.yaml  release_docs.yaml  release_please.yaml  test.yaml  trunk.upgrades.yaml
.trunk/: trunk.yaml
.trunk/configs/: osv-scanner.toml  ruff.toml
.trunk/scripts/: check-block-manual-version.sh
docs/: index.md  justfile
docs/examples/: document_extraction.md  enrichment.md  feedback_clustering.md  hello_world.md  json_processing.md  markdown_processing.md  meeting_transcript_processing.md  named_entity_recognition.md  news_analysis.md  podcast_summarization.md  semantic_joins.md  semantic_search.md
docs/stylesheets/: extra.css
docs/topics/: fenic-mcp.md  markdown-json.md  openrouter.md
examples/document_extraction/: README.md  document_extraction.ipynb  document_extraction.py
examples/enrichment/: README.md  enrichment.ipynb  enrichment.py
examples/feedback_clustering/: README.md  feedback_clustering.ipynb  feedback_clustering.py
examples/hello_world/: README.md  hello_world.ipynb  hello_world.py
examples/json_processing/: README.md  json_processing.ipynb  json_processing.py  whisper-transcript.json
examples/markdown_processing/: README.md  attention_is_all_you_need.md  markdown_processing.ipynb  markdown_processing.py
examples/mcp/: __init__.py
examples/mcp/docs-server/: README.md  __init__.py  populate_tables.py  pyproject.toml  search.py  server.py
examples/mcp/docs-server/tests/: test_search.py
examples/mcp/docs-server/utils/: __init__.py  schemas.py  tree_operations.py  validation.py
examples/meeting_transcript_processing/: README.md  transcript_processing.ipynb  transcript_processing.py
examples/named_entity_recognition/: README.md  ner.ipynb  ner.py
examples/news_analysis/: README.md  news_analysis.ipynb  news_analysis.py
examples/podcast_summarization/: README.md  podcast_summarization.ipynb  podcast_summarization.py
examples/podcast_summarization/data/: lex_ai_cursor_team_meta.json
examples/semantic_joins/: README.md  semantic_joins.ipynb  semantic_joins.py
examples/semantic_search/: README.md  semantic_joins.py
protos/logical_plan/v1/: complex_types.proto  datatypes.proto  enums.proto  expressions.proto  plans.proto  tools.proto
rust/: Cargo.toml
rust/benches/: transcript_parsing.rs
rust/data/transcripts/: transcript-1.srt  transcript-1.txt  transcript-1.webvtt  transcript-2.srt  transcript-2.txt  transcript-2.webvtt
rust/src/: arrow_scalar_extractor.rs  lib.rs
rust/src/chunking/: mod.rs  splitter.rs
rust/src/dtypes/: cast.rs  collections.rs  json.rs  mod.rs  primitives.rs  types.rs
rust/src/fuzz/: mod.rs
rust/src/jinja/: mod.rs  render.rs
rust/src/json/: jq.rs  mod.rs
rust/src/markdown_json/: converter.rs  json_schema.json  mod.rs  types.rs
rust/src/regex/: mod.rs
rust/src/transcript/: mod.rs  types.rs
rust/src/transcript/parsers/: generic.rs  mod.rs  srt.rs  webvtt.rs
scripts/: fix_proto_imports.py
src/fenic/: __init__.py  _constants.py  logging.py
src/fenic/_backends/: schema_serde.py
src/fenic/_backends/cloud/: __init__.py  catalog.py  cloud_catalog_utils.py  engine_config.py  execution.py  manager.py  metrics.py  session_state.py  settings.py
src/fenic/_backends/local/: async_udf_stream.py  async_utils.py  catalog.py  execution.py  lineage.py  manager.py  model_registry.py  schema_storage.py  session_state.py  system_table_client.py  temp_df_db_client.py  template.py
src/fenic/_backends/utils/: catalog_utils.py
src/fenic/_gen/: __init__.py
src/fenic/_gen/protos/: __init__.py
src/fenic/_inference/: __init__.py  embedding_model.py  language_model.py  model_catalog.py  model_client.py  profile_manager.py  rate_limit_strategy.py  request_utils.py  token_counter.py  types.py
src/fenic/_inference/anthropic/: anthropic_batch_chat_completions_client.py  anthropic_profile_manager.py  anthropic_provider.py  anthropic_utils.py
src/fenic/_inference/cohere/: cohere_batch_embeddings_client.py  cohere_profile_manager.py  (+1 more)
src/fenic/api/: __init__.py  catalog.py  column.py  lineage.py  window.py
src/fenic/core/: __init__.py  _resolved_session_config.py  error.py  metrics.py
src/fenic/scripts/: fenic_serve.py
tests/: __init__.py  conftest.py  test_validate.py
tests/_backends/: test_ingestion_coercion.py  test_schema_serde.py
tests/_backends/cloud/: test_cloud_execution.py
tests/_backends/local/: test_cast.py  test_column.py  test_lineage.py  test_metrics.py  test_session.py  test_sql.py  test_transpiler.py
tests/_inference/: __init__.py  test_model_catalog.py  test_openrouter_integration.py  test_rate_limit_strategy.py
tests/_inference/google/: test_gemini_token_counter.py
tests/_logical_plan/: test_expression_equality.py  test_jinja.py  test_jinja_validation.py  test_logical_optimizer.py  test_optimizer.py  test_plan_equality.py  test_plan_exprs.py  test_serde.py
tests/_logical_plan/serde/: test_datatype_serde.py  test_enum_serde.py  test_expression_serde.py  test_literal_serde.py  test_plan_serde.py  test_response_format_serde.py
tests/_logical_plan/signatures/: test_aggregate_function.py  test_function_signatures.py  test_registry.py  test_signatures.py  test_type_signatures.py
tests/_utils/: test_resolved_response_format.py  test_schema_roundtrip_constraints.py  test_type_inference.py
tests/api/: test_session.py
tests/api/mcp/: test_server.py  test_tool_generation.py  utils.py
tests/api/types/: test_dtypes.py  test_semantic_examples.py
tests/core/mcp/: test_binder.py  test_tools.py
tests/examples/: test_examples.py
tools/: automated_mcp_demo_setup.py  mcp_demo_setup.py  predictive_token_accuracy.py  sample_session_config.json  serde_performance_test.py  test_cloud_session.py  test_cloud_session_external_source.py
(+255 files in other folders)
