[project]
name = "docs-server"
version = "0.1.0"
description = "MCP documentation server for Fenic"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["griffe>=0.42.0", "fenic[mcp,google]>=0.4.2"]

[project.scripts]
fenic-docs-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
